<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="A_1_PRG_Main_Master" Id="{f5cadd41-0b0d-4992-977e-5b237965be89}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM A_1_PRG_Main_Master
VAR
	
	rtrigButton             				: ARRAY[1..3] OF Tc2_Standard.R_TRIG;
	ftrigButton             				: ARRAY[1..3] OF Tc2_Standard.F_TRIG; 
	
	fbStringFormatter       				: Tc2_Utilities.FB_FormatString;
	fbEventsManager							: FB_EventsManager;
	
	ntShutdown								: TC2_Utilities.NT_Shutdown;
	closeChrome 							: NT_StartProcess;
	tonUserLogOut							: TON;
	fbUserLog								: FB_UserLog;
	
	nFindAdm								: INT;
	nFindEng								: INT;
	nFindOpe								: INT;
	sUserGroupName							: STRING (255);
	sAdmGroup								: STRING (255)							:= 'Administrator';
	sEngGroup								: STRING (255)							:= 'Engineer';
	sOpeGroup								: STRING (255)							:= 'Operator';
	
	rEfficency								: STRING(510);
	
	fbSystemTime							: NT_GetTime;
	
////////////////////////////////////////////////////////////////////////////////////CSV////////////////////////////////////////////////////////////////////////////	

	//stEventsCSVProcess						:  ST_CSVProcess;
	//fbWriteDataToCSV_Events					: FB_WriteDataToCSV;
	fbPDFMaker								: FB_PDFMaker;
	stPDFMaker								: ST_PDFMaker;
	i										: DINT;
	

	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////GENERAL/////////////////////////////////////////////////////////////////////////////////////
A_3_PRG_FaultHandling();
a_ACT_ButtonsLamps();
b_ACT_PDFMaker();
d_ACT_ShutdownAndQuit();
e_ACT_UserLog();
f_ACT_TerminalInfo();
g_ACT_Manual();
h_ACT_Statistics();

C_1_PRG_MainHMI();
//D_1_1_PROG_Write_Data_To_CSV();
//D_2_1_PROG_Write_Data_To_CSV();

PRG_Puls();

// System PowerUP CTRL
tonSystemPowerUP(IN:=bSystemPoweringUP, PT:=tSystemPowerUP_Time);
IF tonSystemPowerUP.Q THEN 
bSystemPoweringUP:=FALSE;
END_IF


A_4_PRG_MasterSystemTime();

stMACHINE.bHeightTest		:= TRUE;
stMACHINE.bLeakTest			:= TRUE;
stMACHINE.bVisionTest		:= TRUE;



/////////////////////////////////////////////////////////////////////////////////////STATIONS/////////////////////////////////////////////////////////////////////////////////////

B_1_1_PRG_Master_Leak_Test();
//B_2_1_PRG_Master_Station_2();
//B_3_1_PRG_Master_Station_3();

/////////////////////////////////////////////////////////////////////////////////////PROCESS/////////////////////////////////////////////////////////////////////////////////////

A_2_PRG_MachineCtrl();

/////////////////////////////////////////////////////////////////////////////////////EVENT LOG/////////////////////////////////////////////////////////////////////////////////////

fbEventsManager	(			//INPUTS
							bPulse 							:= stPuls.bFlash10Hz, 
							bResetFaults 					:= bResetTest, 
							stStationEvents 				:= stStationEvents,
							sSystemTime						:= sSystemTime,
							sSystemDate						:= sSystemDate,
 							stEventsAssigment				:= stEventsAssigment,
							bDataWritedInCSV				:= stPDFMaker.bDataWrited,
							
							//OUTPUTS
							astActiveEvents 				=> astActiveEvents,
							astEventsHistory				=> astEventsHistory,
							bWriteDataInCSV					=> stPDFMaker.bWriteData,
							nDataHistoryIndex				=> stPDFMaker.nDataHistoryIndex
							);



////////////////////////////////////////////////////////////////////////////////////SYSTEM DATE & TIME/////////////////////////////////////////////////////////////////////////////////////

fbSystemTime( START := stPuls.bFlash10Hz, TIMESTR => stSystemTime);
	

sSystemTime					:= 	CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wHour), STR2 := CONCAT( STR1 := ':', STR2 := 
								CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wMinute), STR2 := 
								CONCAT(STR1 := ':', STR2 := WORD_TO_STRING(stSystemTime.wSecond)))));
								
sSystemDate					:= 	CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wDay), STR2 := 
								CONCAT(STR1 := '/', STR2 := CONCAT(STR1 := WORD_TO_STRING(stSystemTime.wMonth), STR2 := 
								CONCAT(STR1 := '/', STR2 := WORD_TO_STRING(stSystemTime.wYear)))));










]]></ST>
    </Implementation>
    <Action Name="a_ACT_ButtonsLamps" Id="{bc3442d0-b536-4f84-a62c-f220009c35e9}">
      <Implementation>
        <ST><![CDATA[//===================================================================
stButtonsLamps.bStartButtonFallingEdge 	:= ftrigButton[1].Q ;
stButtonsLamps.bStartButtonRisingEdge 	:= rtrigButton[1].Q ;
stButtonsLamps.bStopButtonFallingEdge 	:= ftrigButton[2].Q ; 
stButtonsLamps.bStopButtonRisingEdge 	:= rtrigButton[2].Q ;  
stButtonsLamps.bResetButtonFallingEdge 	:= ftrigButton[3].Q ;
stButtonsLamps.bResetButtonRisingEdge 	:= rtrigButton[3].Q ;



ftrigButton[1](CLK :=);
rtrigButton[1](CLK						:=);
ftrigButton[2](CLK						:=);
rtrigButton[2](CLK						:=);
ftrigButton[3](CLK	:=bResetTest 		);
rtrigButton[3](CLK						:=);



//GVL_IO.dw_T11_EL2809.qRESETButton_Indicator := stPuls.bFlash2Hz AND (NOT stMachineStatus.bInitialising AND NOT stMachineStatus.bAutoCycle AND NOT stMachineStatus.bManualMode AND NOT stMachineStatus.bReadyToStart) ;
//GVL_IO.dw_T11_EL2809.qStartButton_Indicator := (stPuls.bFlash2Hz AND stMachineStatus.bReadyToStart) OR (stMachineStatus.bManualMode AND stPuls.bFlash4Hz ) ;]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_PDFMaker" Id="{eda48c17-c939-4052-a903-aa51ced32374}">
      <Implementation>
        <ST><![CDATA[//EVENTS TO CSV

fbPDFMaker(					
							aDataHistory				:= astEventsHistory,
							bWriteData					:= stPDFMaker.bWriteData,
							sDate						:= stPDFMaker.sDate,
							aDataHistoryArrayLength		:= 1000,
							nDataHistoryIndex			:= stPDFMaker.nDataHistoryIndex,
							sUser						:= 'sebastian',//sUserName,
							sGroup						:= 'administrator',//sUserGroupOut,
							sMachineName				:= 'example',
							
							bDataWrited					=> stPDFMaker.bDataWrited,
							stJavasCriptPDF				=> stJavasCriptPDF,
							bMakePdf					=> stJavasCriptPDF.bMakePDF
							);

(*stPDFMaker.sDate			:= 	CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wDay), STR2 := 
								CONCAT(STR1 := '_', STR2 := CONCAT(STR1 := WORD_TO_STRING(stSystemTime.wMonth), STR2 := 
								CONCAT(STR1 := '_', STR2 := WORD_TO_STRING(stSystemTime.wYear)))));	*)
//CSV
(*fbWriteDataToCSV_Events( 	bWriteData					:= stEventsCSVProcess.bWriteData,
							sFileNamePath				:= stEventsCSVProcess.sFileNamePath,
							sDate						:= stEventsCSVProcess.sDate,
							aDataHistoryArrayLength		:= stEventsCSVProcess.aDataHistoryArrayLength,
							nMAX_CSV_ROWS				:= stEventsCSVProcess.nMAX_CSV_ROWS,
							nMAX_CSV_COLUMNS			:= stEventsCSVProcess.nMAX_CSV_COLUMNS,
							nDataHistoryIndex			:= stEventsCSVProcess.nDataHistoryIndex,
							
							bBusy						=> stEventsCSVProcess.bBusy,
							bError						=> stEventsCSVProcess.bError,
							nErrId						=>,
							bDataWrited					=> stEventsCSVProcess.bDataWrited,
							aDataHistory				:= astEventsHistory);
							

(*stEventsCSVProcess.sDate	:= 	CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wDay), STR2 := 
								CONCAT(STR1 := '_', STR2 := CONCAT(STR1 := WORD_TO_STRING(stSystemTime.wMonth), STR2 := 
								CONCAT(STR1 := '_', STR2 := WORD_TO_STRING(stSystemTime.wYear)))));		*)				
								

stEventsCSVProcess.sFileNamePath						:= 'C:\Users\Sebastian.Ulloa\Desktop\GIT PROJECTS\TEMPLATES\TEMPLATE_VER1\CSV\EVENTS\';								
stEventsCSVProcess.aDataHistoryArrayLength				:= 200;
stEventsCSVProcess.nMAX_CSV_ROWS						:= 1000;
stEventsCSVProcess.nMAX_CSV_COLUMNS						:= 4;*)]]></ST>
      </Implementation>
    </Action>
    <Action Name="d_ACT_ShutdownAndQuit" Id="{b7dac9a1-fefc-426e-a57f-b21e21205edc}">
      <Implementation>
        <ST><![CDATA[closeChrome(
    NetId := '',
    PathStr := 'C:\Windows\System32\mshta vbscript:Execute("CreateObject(""WScript.Shell"").Run ""powershell -c',
    DirName := 'C:\Windows\System32\WindowsPowerShell\v1.0',
    ComndLine := 'taskkill /F /IM chrome.exe /T"", 0: window.close")',
    Start := bQuitHmi,
    TmOut := DEFAULT_ADS_TIMEOUT
);
 
bQuitHmi:= FALSE;

ntShutdown(NETID := NetAmsId, DELAY := 5, START := bShutDown);]]></ST>
      </Implementation>
    </Action>
    <Action Name="e_ACT_UserLog" Id="{804f315c-0a35-4a48-b9b3-6593241a417c}">
      <Implementation>
        <ST><![CDATA[sUserGroupName																:= sUserGroupIn;

nFindAdm	:= TC2_Utilities.FIND( 	STR1									:= sUserGroupName,
									STR2									:= sAdmGroup);
									
nFindEng	:= TC2_Utilities.FIND( 	STR1									:= sUserGroupName,
									STR2									:= sEngGroup);
					
nFindOpe	:= TC2_Utilities.FIND( 	STR1									:= sUserGroupName,
									STR2									:= sOpeGroup);
				
IF nFindAdm <> 0 THEN
	sUserGroupOut															:= 'Administrator';
ELSIF nFindEng <> 0 THEN
	sUserGroupOut															:= 'Engineer';
ELSIF nFindOpe <> 0 THEN
	sUserGroupOut															:= 'Operator';
ELSE sUserGroupOut															:= '';
END_IF

tonUserLogOut( IN := (sUserGroupOut <> 'Administrator' OR sUserGroupOut <> 'Engineer') AND bUserLoggedIn , PT := T#10M);

IF tonUserLogOut.Q THEN
	bLogOut 											:= TRUE;
ELSE bLogOut 											:= FALSE;
END_IF

rUserLoggedIn( CLK := bUserLoggedIn);

fbUserLog(	nNumberOfData								:= 250,
			bSaveSignal									:= rUserLoggedIn.Q, 
			sUser										:= sUserName,
			sGroup										:= sUserGroupOut,
			sDate										:= sSystemDate,
			sTime										:= sSystemTime,
			aDataOutput									:= stUserLog);
			








]]></ST>
      </Implementation>
    </Action>
    <Action Name="f_ACT_TerminalInfo" Id="{8299d142-9ce5-4d1b-9f3f-121127d1dbfb}">
      <Implementation>
        <ST><![CDATA[dw_T01_EK1100.stTerminalInfo.fbTerminalInfo( 	nTerminalState						:= dw_T01_EK1100.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T01_EK1100.stTerminalInfo.sTerminalInfo);
									
dw_T02_EL6070.stTerminalInfo.fbTerminalInfo( 	nTerminalState						:= dw_T02_EL6070.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T02_EL6070.stTerminalInfo.sTerminalInfo);

dw_T03_EL6910.stTerminalInfo.fbTerminalInfo( 	nTerminalState						:= dw_T03_EL6910.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T03_EL6910.stTerminalInfo.sTerminalInfo);
												
dw_T04_EL1918.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T04_EL1918.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T04_EL1918.stTerminalInfo.sTerminalInfo);
												
dw_T05_EL1918.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T05_EL1918.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T05_EL1918.stTerminalInfo.sTerminalInfo);
												
dw_T06_EL2904.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T06_EL2904.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T06_EL2904.stTerminalInfo.sTerminalInfo);
												
dw_T07_EL9410.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T07_EL9410.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T07_EL9410.stTerminalInfo.sTerminalInfo);
											
dw_T08_EL1809.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T08_EL1809.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T08_EL1809.stTerminalInfo.sTerminalInfo);
												
dw_T09_EL2809.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T09_EL2809.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T09_EL2809.stTerminalInfo.sTerminalInfo);
												
dw_T10_EL2809.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T10_EL2809.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T10_EL2809.stTerminalInfo.sTerminalInfo);
												
dw_T11_EL3058.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T11_EL3058.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T11_EL3058.stTerminalInfo.sTerminalInfo);
												
dw_T12_EL6633.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T12_EL6633.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T12_EL6633.stTerminalInfo.sTerminalInfo);
												
//add boxes]]></ST>
      </Implementation>
    </Action>
    <Action Name="g_ACT_Manual" Id="{87b8b019-9eb6-46b9-b781-3301c89600c8}">
      <Implementation>
        <ST><![CDATA[

IF stMachineStatus.bReadyToStart THEN
	bEnableManual											:= TRUE;
ELSE bEnableManual											:= FALSE;
END_IF

IF (nMainRegion = 5) AND stMasterCtrl.bNoFault 
	AND NOT stMasterCtrl.bCycleStopRequest AND NOT stButtonsLamps.bStopButtonFallingEdge THEN
	stMasterCtrl.bManualModeRequest							:= TRUE;
	bManualModeOffFlag										:= FALSE;
ELSE 
	stMasterCtrl.bManualModeRequest							:= FALSE; 
	bManualModeOffFlag										:= TRUE;											
END_IF

]]></ST>
      </Implementation>
    </Action>
    <Action Name="h_ACT_Statistics" Id="{00b1c5d7-138a-4e5a-aad9-c5f6ae987c75}">
      <Implementation>
        <ST><![CDATA[stStatisticsHMI[0].sName			:= 'TOTAL';

stStatisticsHMI[0].nGood		:= stStatisticsHMI[1].nGood + stStatisticsHMI[2].nGood + stStatisticsHMI[3].nGood;
stStatisticsHMI[0].nTotalGood	:= stStatisticsHMI[1].nTotalGood + stStatisticsHMI[2].nTotalGood + stStatisticsHMI[3].nTotalGood;
stStatisticsHMI[0].nBad			:= stStatisticsHMI[1].nBad + stStatisticsHMI[2].nBad + stStatisticsHMI[3].nBad;
stStatisticsHMI[0].nTotalBad	:= stStatisticsHMI[1].nTotalBad + stStatisticsHMI[2].nTotalBad + stStatisticsHMI[3].nTotalBad;

								

IF (( stStatisticsHMI[0].nGood + stStatisticsHMI[0].nBad) <> 0) THEN
	
	rEfficency							:= LREAL_TO_FMTSTR(in := (DINT_TO_REAL(stStatisticsHMI[0].nGood) /( DINT_TO_REAL(stStatisticsHMI[0].nGood) + DINT_TO_REAL(stStatisticsHMI[0].nBad))) * 100.0,iPrecision := 2, bRound := TRUE);
	stStatisticsHMI[0].nEfficency		:= CONCAT(STR1 := '%', STR2 := (rEfficency));

ELSE stStatisticsHMI[0].nEfficency		:= CONCAT(STR1 := '%', STR2 := (DINT_TO_STRING(0)));
	
END_IF

]]></ST>
      </Implementation>
    </Action>
    <Action Name="i_ACT_TwinSAFE" Id="{0ecb0e06-5557-4943-b4e7-d2562aeb50f9}">
      <Implementation>
        <ST><![CDATA[stTwinSAFE.iAirSupplyMeasurement 		:= REAL_TO_UINT(0.0003 * GVL_IO.dw_T11_EL3058.iMainPressure); 

stTwinSAFE.iAirPressureMaxValue			:= nAirPressureMaxValue;
stTwinSAFE.iAirPressureMinValue			:= nAirPressureMinValue;
stTwinSAFE.iProcessDoorClosing			:= bDoorClosingFlag;
stTwinSAFE.iProcessDoorClosedCondition	:= bProcessDoorClosedConditionFlag;]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="A_1_PRG_Main_Master">
      <LineId Id="951" Count="82" />
      <LineId Id="373" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.a_ACT_ButtonsLamps">
      <LineId Id="2" Count="15" />
      <LineId Id="25" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.b_ACT_PDFMaker">
      <LineId Id="16" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="60" Count="1" />
      <LineId Id="70" Count="2" />
      <LineId Id="62" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="74" Count="2" />
      <LineId Id="73" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="36" Count="3" />
      <LineId Id="41" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="10" Count="2" />
      <LineId Id="42" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="43" Count="3" />
      <LineId Id="13" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="48" Count="3" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.d_ACT_ShutdownAndQuit">
      <LineId Id="2" Count="8" />
      <LineId Id="1" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.e_ACT_UserLog">
      <LineId Id="198" Count="0" />
      <LineId Id="197" Count="0" />
      <LineId Id="194" Count="0" />
      <LineId Id="199" Count="1" />
      <LineId Id="202" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="210" Count="3" />
      <LineId Id="207" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="81" Count="1" />
      <LineId Id="79" Count="0" />
      <LineId Id="131" Count="1" />
      <LineId Id="185" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="188" Count="4" />
      <LineId Id="187" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="110" Count="1" />
      <LineId Id="108" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="72" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.f_ACT_TerminalInfo">
      <LineId Id="34" Count="0" />
      <LineId Id="36" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="1" Count="5" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="32" Count="1" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.g_ACT_Manual">
      <LineId Id="23" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.h_ACT_Statistics">
      <LineId Id="2" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="38" Count="6" />
      <LineId Id="21" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.i_ACT_TwinSAFE">
      <LineId Id="2" Count="4" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>